# itmo_lab_2

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: homework.yml
artifacts/task_1/: test_mtx_1.tex  test_mtx_2.tex  test_mtx_3.tex  test_mtx_4.tex  test_mtx_5.tex
artifacts/task_2/: test_mtx_11.tex  test_mtx_2.tex  url.txt
metautils/: __init__.py  compiler.py
src/: __init__.py  latex_converter.py  main.py  task_1.py
tests/: test_graphics.py  test_mtx.py  test_task_1.py
tests/metautils/: __init__.py  compiler.py
