[project]
name = "lab_2"
version = "0.1.0"
description = "ITMO_LAB_2"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest-cov>=4.1.0",
    "pytest>=8.3.3",
    "pytest-forked>=1.6.0",
    "ruff>=0.7.4",
    "mypy",
    "latex-generator-neimess-itmo>=0.1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
xfail_strict = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-namings
    "C",   # flake8-comprehensions
    "G",   # flake8-logging-format
    "DTZ", # flake8-datetimetz
    "T20", # flake8-print
    "PL",  # pylint,
    "SIM", # simplifier
    "B",   # `flake8-bugbear`
]
ignore = [
    "C901",    # too complex
    "C401",    # unnecessary generator (rewrite as a `set` comprehension)
    "C402",    # unnecessary generator (rewrite as a `dict` comprehension)
    "PLR0911", # too many return statements
    "PLR0912", # too many branches 
    "PLR0913", # too many arguments in function definition
    "PLR2004", # magic value used in comparison
    "T201",    # print
]

[tool.ruff]
line-length = 120
include = ["src/**/*.py", "tests/**/*.py"]
exclude = ["migrations", "docs", "venv", "__pycache__", "__init__.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
strict = true
ignore_missing_imports = true 
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_type_arg = true
disable_error_code = ["type-arg"]
files = "src/**/*.py"
